--- a/views/baiviet_cuatoi.ejs
+++ b/views/baiviet_cuatoi.ejs
@@ -26,7 +26,7 @@
                                 <th width="15%">Chủ đề</th>
                                 <th width="55%">Tiêu đề</th>
                                 <th width="10%">Ngày đăng</th>
-                                <th width="5%" title="Tình trạng kiểm duyệt?">D?</th>
+                                <th width="5%" title="Tình trạng kiểm duyệt?">Duyệt</th>
                                 <th width="5%">Sửa</th>
                                 <th width="5%">Xóa</th>
                             </tr>
